# hackathon-0-personal-ai-employee-bronze-tier

./: .gitignore  .gmail_processed_ids  CLAUDE.md  authenticate_gmail.py  main.py  pyproject.toml
AI_Employee_Vault/.obsidian/: workspace.json
bronze_tier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: bronze-tier-decisions.md
docs/adr/: ADR-001-bronze-tier-read-only-scope.md  ADR-002-watcher-direct-invocation.md  ADR-003-multiple-focused-skills.md  ADR-004-high-volume-async-processing.md  ADR-005-sensitive-data-security.md  ADR-006-error-notification-strategy.md
docs/architecture/: component-tier-mapping.md
docs/sessions/: 2026-02-04-initial-discovery.md
history/prompts/general/: 0001-reverse-engineer-codebase-into-specs.general.prompt.md
src/: gmail_watcher_example.py
src/watchers/: .gmail_processed_ids  gmail_watcher.py
